# blux-lite

./: .blux_Ubuntu_setup.sh  .env.example  .gitignore  CHANGELOG.md  CREDITS.md  INSTALL.md  LICENCE.md  LICENSE  MODELS.md  README.md  auto-start.sh  bLUX_lite.sh  blux-lite.sh  blux.py  blux_api.sh  blux_lite.sh  first_start.sh  install_models.sh  llama_chat.py  openai_ollama_wrapper.py  plugin_menu.sh  pyproject.toml  requirements.txt  scripts_menu.sh  start_litellm.sh
.config/blux-lite-gold/: auto-start.json
.secrets/: .gitignore
assets/: banner.txt
blux/: README.md  __init__.py  ai_parse.py  bluxq.py  catalog_install.py  cli.py  config.py  engines.py  installer.py  ish.py  keywords.py  legacy_menu.py  libf_loader.py  memory.py  models.py  plugins.py  router.py  secrets.py  settings.py  tui_blg.py  tui_blg.tcss  tui_starship.py  tui_starship.py.bak.1759125086  tui_starship.py.bak.1759125152  tui_starship.py.bak.1759125229  tui_starship.tcss  tui_starship.tcss.bak.1759124951  tui_starship.tcss.bak.1759125087  utils.py
blux-lite/: blux_voice.py  llama_chat.py  memory.json
blux-lite/plugins/: plugin_sysinfo.py
blux/generators/: plugin.py  script.py
blux/orchestrator/: __init__.py  classifier.py  controller.py  logs.py  registry.py  router.py
blux/tools/: cmds.py  fs.py  git.py  registry.py  safety.py
docs/: BLUX-LITE-GOLD-FILETREE.md  COMMANDS.md  ENGINES_MODELS.md  LIBF_GUIDE.md  QUICKSTART_HIGH_END.md  QUICKSTART_LINUX.md  QUICKSTART_LOW_RAM.md  QUICKSTART_MACOS.md  QUICKSTART_NORMAL.md  QUICKSTART_WINDOWS.md  README.md  STORAGE_GUIDE.md  architecture. md
engines/: README.md
examples/cloud/: README.md  load_secrets.sh  rclone_setup.sh
heart/: app.js  index.html  style.css
models/: README.md
plugins/: README.md  _template.py  aik_mobile.py  apk_retool.py  apktool_plugin.py  bench.py  buildtools_signalign.py  catalog.py  code_quality.py  community_fetcher.py  compat_scan.py  daisy_of_jadis.py  doctor.py  dtc_tools.py  engines_plus.py  genkit.py  gguf_tools.py  heimdall_tools.py  lora_manager.py  modpacks.py  mtkclient_plugin.py  payload_tools.py  plug.py  plugin_calc.py  rom_manager_safe.py  router_debug.py  savscrip.py  sys.py
plugins/liberation_framework/: libf_export.py  libf_hub.py  libf_note.py  libf_save.py  project.py
scripts/: README.md  clean_cache.sh  ish.sh
scripts/cloud/: admin.sh  blux_cloud_safety_addon.sh  heart.sh  kill_switch.sh  selftest.sh  snapshot.sh
scripts/demo/: jawdrop.sh
scripts/main_menu/: aliases_install.sh  backup_blux.sh  blux_autostart_boot.sh  blux_box86_wine.sh  blux_freshtermux.sh  catalog.sh  (+27 more)
shim/: launcher.py
(+60 files in other folders)
